Refactor: Update permissions and improve error handling in audio capture
- Removed WRITE_EXTERNAL_STORAGE permission from AndroidManifest.xml to enhance security.
- Improved error handling in AudioInputController by utilizing string resources for error messages.
- Simplified method signatures in AudioInputController and ChatSessionController for better readability.
- Cleaned up unused fields and methods in various classes to streamline the codebase.
- Updated layout files to use string resources for better localization support.